--- a/css/Shen_style.scss
+++ b/css/Shen_style.scss
@@ -1,40 +1,101 @@
-.top-right {
-    margin-left: 150px;
-    padding-top: 100px;
-    padding-bottom: 75px;
+// 版型C
+.section3 {
+    min-height: 100vh;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
+
+    // 4欄位兩行標題
+    .col-4>div:nth-child(2) {
+        margin-top: 3.71vh;
+    }
+
+    // 6欄位內文
+    p {
+        letter-spacing: 0.4rem;
+        line-height: 3.15rem;
+    }
+
+    // 滿版圖片
+    .row:nth-child(2) {
+        margin-top: 7.41vh;
+    }
 }
 
-.top-left {
-    padding-top: 100px;
-    padding-bottom: 75px;
+// 版型J
+.section4 {
+    min-height: 100vh;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
+
+    p {
+        letter-spacing: 0.4rem;
+        line-height: 3.15rem;
+    }
+
+    .row:nth-child(2) {
+        margin-top: 6.95vh;
+    }
 }
 
-.center-1 {
-    padding-bottom: 75px;
+// 版型A
+.section5 {
+    min-height: 100vh;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
+
+    // 滿版圖片
+    .row:nth-child(2) {
+        margin-top: 6.95vh;
+    }
+
+    // 滿版內文
+    .text-Shen-island01 {
+        margin-top: 6.95vh;
+        letter-spacing: 0.4rem;
+        line-height: 3.15rem;
+    }
 }
 
-.center-2 {
-    padding-bottom: 100px;
-    font-size: 29px;
+// 版型F-2
+.section6 {
+    min-height: 100vh;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
+
+    .row:nth-child(2) {
+        margin-top: 51vh;
+
+        p {
+            letter-spacing: 0.4rem;
+            line-height: 3.93rem;
+        }
+    }
 }
 
-.center-3 {
-    padding-bottom: 40px;
+.img-Shen-ara01 {
+    background-image: url('../img/Shen/Shen-ara01.jpg');
+    background-position: center top;
+    background-repeat: no-repeat;
 }
 
-.center-4 {
-    font-size: 29px;
+// 版型D
+.section7 {
+    min-height: 100vh;
+    padding-top: 9.26vh;
+    padding-bottom: 9.26vh;
+
+    .col-5 div:nth-child(2) {
+        margin-top: 3.71vh;
+
+        p {
+            letter-spacing: 0.4rem;
+            line-height: 3.15rem;
+        }
+    }
 }
 
-.center-5 {
-    padding-bottom: 100px;
-}
 
-#center-6 {
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
+// 待調整
 @media(max-width:414px) {
     .center-1 {
         width: 95vh;
