--- a/css/Jiji_style.scss
+++ b/css/Jiji_style.scss
@@ -21,122 +21,77 @@ sans-serif;
 $web-font-1: 'Share Tech Mono',
 monospace;
 
-
-
-
-
+// 版型A-1
 .section3 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
+  padding-top: 9.26vh;
+  padding-bottom: 9.26vh;
+
+  // 滿版圖片
+  .row:nth-child(2) {
+    margin-top: 6.95vh;
+  }
 
   // 滿版內文
   .text-Jiji-road01 {
-    margin-top: 75px;
-    letter-spacing: 7px;
-    line-height: 1.6em;
-  }
-
-  .img-Jiji-road01 {
-    margin-top: 75px;
+    margin-top: 6.95vh;
+    letter-spacing: 0.4rem;
+    line-height: 3.15rem;
   }
 }
 
+// 版型F-1
 .section4 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
+  padding-top: 9.26vh;
+  padding-bottom: 9.26vh;
 
-  //全螢幕圖
-  .img-Jiji-car01 {
-    width: 1920px;
-    height: 700px;
-    border-radius: 5px;
-    background-image: url("../img/Jiji/Jiji-car01.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    // 纜車標題
-    .Jiji-car-title {
-      margin-top: 100px;
-    }
+  .row:nth-child(2) {
+    margin-top: 4.63vh;
   }
 
-  // 滿版內文
-  .text-Jiji-car01 {
-    margin-top: 75px;
-    letter-spacing: 7px;
-    line-height: 1.6em;
+  .row:nth-child(3) {
+    margin-top: 38vh;
+
+    p {
+      letter-spacing: 0.4rem;
+      line-height: 3.93rem;
+    }
   }
 }
 
+.img-Jiji-car01 {
+  background-image: url('../img/Jiji/Jiji-car01.jpg');
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
+// 版型C
 .section5 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
-
-  .img1 {
-    margin-bottom: 35px;
-  }
-
-  .img2 {
-    margin-top: 60px;
-  }
-
-  // 4欄位單行標題
-  .img-Jiji-islandTitle01 {
-    max-width: 350px;
-    height: 105px;
-    background-image: url("../img/Jiji/Jiji-islandTitle01.png");
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+  padding-top: 9.26vh;
+  padding-bottom: 9.26vh;
 
   // 4欄位兩行標題
-  .img-Jiji-islandTitle02 {
-    margin-top: 40px;
-    max-width: 350px;
-    height: 105px;
-    background-image: url("../img/Jiji/Jiji-islandTitle02.png");
-    background-position: center;
-    background-repeat: no-repeat;
+  .col-4>div:nth-child(2) {
+      margin-top: 3.71vh;
   }
 
   // 6欄位內文
-  .text-Jiji-island01 {
-    letter-spacing: 6px;
-    line-height: 1.6em;
+  p {
+      letter-spacing: 0.4rem;
+      line-height: 3.15rem;
   }
 
   // 滿版圖片
-  .img-Jiji-island01 {
-    margin-top: 80px;
-    max-width: 1110px;
-    height: 550px;
-    border-radius: 5px;
-    background-image: url("../img/Jiji/Jiji-island01.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-}
-
-.section6 {
-  min-height: 50vh;
-  padding: 150px 0 100px 0;
-  text-align: center;
-
-  .img-main-btn-Shal {
-    max-width: 255px;
-    height: 360px;
-    border-radius: 20px;
-    background-image: url("../img/main-btn-Shal.png");
-    background-position: center;
-    background-repeat: no-repeat;
+  .row:nth-child(2) {
+      margin-top: 7.41vh;
   }
 }
 
 
+
+// 待調整
 @media (max-width: 320px) {
   body {
     font-size: 12px;
