--- a/css/Ping_style.css
+++ b/css/Ping_style.css
@@ -1,115 +1,40 @@
-.section2 {
-  min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
-}
-
-.section2 .img-main-Ping-title {
-  max-width: 350px;
-  height: 80px;
-  background-image: url("../Ping-img/main-Ping-title.png");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.section2 .text-main-Ping-cotent {
-  margin-top: 40px;
-  letter-spacing: 7px;
-  line-height: 1.6em;
-}
-
-.section2 .img-main-Ping-km {
-  margin-top: 150px;
-  max-width: 445px;
-  height: 105px;
-}
-
-.section2 .img-main-Ping-line {
-  margin-top: 133px;
-  max-width: 1110px;
-  height: 140px;
-  background-image: url("../img/main-Shal-line.png");
-  background-position: bottom;
-  background-repeat: no-repeat;
-}
-
-.section2 .img-main-Ping-train {
-  margin-top: -19px;
-  max-width: 850px;
-  height: 130px;
-}
-
-.img-main-Shal-bgi {
-  max-width: 1920px;
-  height: 1080px;
-  padding: 0;
-  background-image: url("../img/main-Shal-bgi.png");
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .section3 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
+  padding-top: 9.26vh;
+  padding-bottom: 9.26vh;
 }
 
-.section3 .img-Ping-water01 {
-  margin-top: 75px;
-  max-width: 1110px;
-  height: 402px;
-  border-radius: 5px;
-  background-image: url("../img/Ping/Ping-water01.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.section3 .mini {
-  padding-bottom: 75px;
-}
-
-.section3 .custom-row-mx-15 {
-  margin-top: 75px;
+.section3 .row:nth-child(2) {
+  margin-top: 6.95vh;
 }
 
 .section3 .text-Ping-water01 {
-  margin-top: 75px;
-  letter-spacing: 7px;
-  line-height: 1.6em;
+  margin-top: 6.95vh;
+  letter-spacing: 0.2rem;
+  line-height: 2.6rem;
 }
 
 .section4 {
   min-height: 100vh;
-  padding: 100px 0;
-  text-align: center;
+  padding-top: 9.26vh;
+  padding-bottom: 9.26vh;
 }
 
-.section4 .title-Ping-lamp01 {
-  margin-bottom: 40px;
+.section4 .col-5 div:nth-child(2) {
+  margin-top: 3.71vh;
 }
 
-.section4 .text-Ping-lamp01 {
-  letter-spacing: 7px;
-  line-height: 1.6em;
+.section4 .col-5 div:nth-child(2) p {
+  letter-spacing: 0.5rem;
+  line-height: 3.15rem;
 }
 
 .section5 {
-  text-align: center;
+  min-height: 100vh;
 }
 
-.section6 {
-  min-height: 50vh;
-  padding: 150px 0 100px 0;
-  text-align: center;
-}
-
-.section6 .img-main-btn-Shal {
-  max-width: 255px;
-  height: 360px;
-  border-radius: 20px;
-  background-image: url("../img/main-btn-Shal.png");
+.img-Ping-lamp02 {
+  background-image: url("../img/Ping/Ping-lamp02.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
